--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
     "tail": "wrangler tail"
   },
   "dependencies": {
-    "rwsdk": "0.3.4"
+    "rwsdk": "0.3.10"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "1.12.3",
-    "@cloudflare/workers-types": "^4.20250906.0",
+    "@cloudflare/vite-plugin": "1.12.4",
+    "@cloudflare/workers-types": "^4.20250913.0",
     "@tailwindcss/vite": "^4.1.13",
-    "@types/node": "^24.3.1",
-    "@types/react": "^19.1.12",
+    "@types/node": "^24.5.1",
+    "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
-    "vite": "^7.1.4",
-    "wrangler": "^4.34.0"
+    "vite": "^7.1.5",
+    "wrangler": "4.35.0"
   },
   "pnpm": {
     "peerDependencyRules": {
