--- a/package.json
+++ b/package.json
@@ -15,26 +15,22 @@
     "tail": "wrangler tail"
   },
   "dependencies": {
-    "rwsdk": "0.3.10"
+    "react": "19.2.0-canary-3fb190f7-20250908",
+    "react-dom": "19.2.0-canary-3fb190f7-20250908",
+    "react-server-dom-webpack": "19.2.0-canary-3fb190f7-20250908",
+    "rwsdk": "1.0.0-alpha.19"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "1.12.4",
-    "@cloudflare/workers-types": "^4.20250913.0",
+    "@cloudflare/vite-plugin": "1.13.7",
+    "@cloudflare/workers-types": "^4.20250927.0",
     "@tailwindcss/vite": "^4.1.13",
-    "@types/node": "^24.5.1",
-    "@types/react": "^19.1.13",
+    "@types/node": "^24.5.2",
+    "@types/react": "^19.1.14",
     "@types/react-dom": "^19.1.9",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
-    "vite": "^7.1.5",
-    "wrangler": "4.35.0"
-  },
-  "pnpm": {
-    "peerDependencyRules": {
-      "allowedVersions": {
-        "vite": "7"
-      }
-    }
+    "vite": "^7.1.7",
+    "wrangler": "4.40.2"
   },
   "prettier": {
     "printWidth": 100,
