--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
     "tail": "wrangler tail"
   },
   "dependencies": {
-    "react": "19.2.0-canary-3fb190f7-20250908",
-    "react-dom": "19.2.0-canary-3fb190f7-20250908",
-    "react-server-dom-webpack": "19.2.0-canary-3fb190f7-20250908",
-    "rwsdk": "1.0.0-alpha.20"
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-server-dom-webpack": "19.2.0",
+    "rwsdk": "1.0.0-beta.8"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "1.13.7",
-    "@cloudflare/workers-types": "^4.20250927.0",
-    "@tailwindcss/vite": "^4.1.13",
-    "@types/node": "^24.5.2",
-    "@types/react": "^19.1.15",
-    "@types/react-dom": "^19.1.9",
-    "tailwindcss": "^4.1.13",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.7",
-    "wrangler": "4.40.2"
+    "@cloudflare/vite-plugin": "1.13.9",
+    "@cloudflare/workers-types": "^4.20251001.0",
+    "@tailwindcss/vite": "^4.1.14",
+    "@types/node": "^24.6.2",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.8",
+    "wrangler": "4.41.0"
   },
   "prettier": {
     "printWidth": 100,
