--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "tail": "wrangler tail"
   },
   "dependencies": {
-    "react": "19.3.0-canary-d7215b49-20251013",
-    "react-dom": "19.3.0-canary-d7215b49-20251013",
-    "react-server-dom-webpack": "19.3.0-canary-d7215b49-20251013",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-server-dom-webpack": "^19.2.0",
     "rwsdk": "1.0.0-beta.14"
   },
   "devDependencies": {
