--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rwsdk-minimal-starter",
+  "name": "rwsdk-minimal-todo",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
