--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "rwsdk-minimal-starter",
+  "name": "rwsdk-minimal-todo",
   "main": "src/worker.tsx",
   "compatibility_date": "2025-09-24",
   "preview_urls": true,
